--- a/2020_21/FPM/algebra-notes/notes.tex
+++ b/2020_21/FPM/algebra-notes/notes.tex
@@ -465,10 +465,10 @@
     Let $\phi:G\to H$ be a group homomorphism.
     \begin{enumerate}
         \item The \emph{image} of $\phi$ is defined to be \begin{align*}
-            \im\phi := \{h\in H \sv h=\phi(g)\text{ for some }g\in G\}.
+            \gim\phi := \{h\in H \sv h=\phi(g)\text{ for some }g\in G\}.
         \end{align*}
         \item We define the \emph{kernel} of $\phi$ to be \begin{align*}
-            \ker \phi := \{g\in G \sv \phi(g) = e_H\}.
+            \gke \phi := \{g\in G \sv \phi(g) = e_H\}.
         \end{align*}
     \end{enumerate}
 \end{definition}
@@ -481,14 +481,14 @@
 
 
 \begin{proposition}
-    Let $\phi:G\to H$ be a group homomorphism. Then $\ker\phi\triangleleft G$.
+    Let $\phi:G\to H$ be a group homomorphism. Then $\gke\phi\triangleleft G$.
 \end{proposition}
 
 \begin{proposition}
     Let $\phi: G\to H$ be a group homomorphism. Then
     \begin{enumerate}
-        \item $\phi:G\to H$ is injective if and only if $\ker\phi=\{e_G\}$.
-        \item If $\phi:G\to H$ is injective, then $\phi$ gives an isomorphism $G\cong \im\phi$.
+        \item $\phi:G\to H$ is injective if and only if $\gke\phi=\{e_G\}$.
+        \item If $\phi:G\to H$ is injective, then $\phi$ gives an isomorphism $G\cong \gim\phi$.
     \end{enumerate}
 \end{proposition}
 
@@ -505,7 +505,7 @@
 \end{theorem}
 
 \begin{corollary}
-    Let $H,K\leq G$ be infinite subgroups of a group $G$ such that
+    Let $H,K\leq G$ be finite subgroups of a group $G$ such that
     $H\cap K=\{e\}$. Then $\abs{HK} = \abs H \times \abs K$.
 \end{corollary}
 \end{document}
