INF2-IADS: Week 7 notes

--- a/2020_21/INF2-IADS/notes/notes.tex
+++ b/2020_21/INF2-IADS/notes/notes.tex
@@ -710,5 +710,16 @@ fib = memoise(fib)
 \end{proposition}
 
 
+\section{Dealing with NP-completeness}
+
+
+\paragraph{General possibilities}
+\begin{itemize}
+	\item heuristics
+	\item polynomial-time algorithm for approximation
+	\item brute-force in exponential time
+	\item recursive backtracking
+\end{itemize}
+
 
 \end{document}
