--- a/2020_21/FPM/H6/homework.tex
+++ b/2020_21/FPM/H6/homework.tex
@@ -71,7 +71,7 @@
     \indent Consider the case $a<b$. Then by definition of $S_1$ and $S_2$
     we know that for all $x$ in the nonempty set
     \begin{align*}
-        (a,x_0)\cap(x_0,b)=\{x\in(a,b):x\not=x_0\},
+        (a,x_0)\cup(x_0,b)=\{x\in(a,b):x\not=x_0\},
     \end{align*}
     $f(x)\not=0$.
     However, by (\ref{premise}) there exists some $x\in(a,b)$ with $f(x)=0$
